--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "shadcn": "^3.6.2",
     "tailwind-merge": "^3.4.0"
   },
